[package]
name = "pallet-commitment"
version = "0.1.1"
description = "A reusable, fungible commitment and bonding primitive with support for structured, indexed, and pooled value allocations"
readme = "README.md"
keywords = ["substrate", "frame", "polkadot", "staking", "bonding"]
documentation = "https://auguth.github.io/frame-suite/rust-doc/pallet_commitment/index.html"

license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true


[dependencies]
codec.workspace = true
frame-benchmarking = {workspace = true, default-features = false, optional = true }
frame-suite.workspace = true
frame-plugins.workspace = true
serde.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
scale-info.workspace = true
derive_more.workspace = true

[dev-dependencies]
pallet-xp.workspace = true
sp-io.workspace = true


[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "frame-suite/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-xp/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
]

dev = []

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]

[lints]
workspace = true
